src/objects/LeanData__Territory_Segment__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Draft_FileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Draft FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Fields_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fields Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__FileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Priority__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Upload_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Upload Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Version__c</fullName>
        <label>Version Number</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Territory Segment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>